homelab/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky
  namespace: blocky
  labels:
    app: blocky
spec:
  selector:
    app: blocky
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: http
      port: 4000
      targetPort: 4000
