homelab/blocky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky
  namespace: blocky
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: blocky.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blocky
                port:
                  number: 4000
  tls:
    - hosts:
        - blocky.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
